# Q3_25_Builder_MDaeva

./: README.md
capstone-project/: Anchor.toml  Cargo.toml  LICENSE  README.md  build.sh  deploy.sh  dump.sh  package.json  program_id.sh
capstone-project/.cargo/: config.toml
capstone-project/programs/amm/: Cargo.toml
capstone-project/programs/amm/src/: lib.rs
capstone-project/programs/amm/src/instructions/: open_position.rs  swap.rs
capstone-project/programs/amm/src/libraries/: full_math.rs  swap_math.rs  tick_math.rs
capstone-project/programs/amm/src/states/: pool.rs
capstone-project/programs/clmm-mock/: Cargo.toml
capstone-project/programs/clmm-mock/src/: lib.rs  state.rs  util.rs
capstone-project/programs/clmm-mock/src/instructions/: create_amm_config.rs  create_operation_account.rs  create_pool.rs  create_pool_new.rs  mod.rs  open_position.rs  open_position_with_token22_nft.rs  swap_router_base_in.rs  swap_v2.rs
capstone-project/programs/dex-adapter/: Cargo.toml
capstone-project/programs/dex-adapter/src/: error.rs  helpers.rs  lib.rs  state.rs  types.rs
capstone-project/programs/dex-adapter/src/instructions/: confirm_admin_rotation.rs  init.rs  mod.rs  save_route.rs  swap.rs  swap_and_activate.rs  swap_and_unwrap_wsol.rs  swap_multihop.rs  update_config.rs
capstone-project/programs/registry/: Cargo.toml
capstone-project/programs/registry/src/: error.rs  lib.rs  state.rs  types.rs
capstone-project/programs/registry/src/instructions/: activate_account.rs  close_account.rs  confirm_account_rotation.rs  confirm_admin_rotation.rs  create_account.rs  init.rs  mod.rs  reopen_account.rs  request_account_rotation.rs  update_account_config.rs  update_common_config.rs  update_config.rs  withdraw_revenue.rs  write_data.rs
capstone-project/scripts/backend/: app.ts  codegen.ts  envs.ts  generate-types.ts  utils.ts
capstone-project/scripts/backend/capture/: user-account.ts
capstone-project/scripts/backend/snapshots/devnet/: user-account.json
capstone-project/scripts/common/account/: encryption.ts  index.ts
capstone-project/scripts/common/config/: index.ts
capstone-project/scripts/common/interfaces/: dex-adapter.anchor.ts  dex-adapter.ts  index.ts  registry.anchor.ts  registry.ts
capstone-project/scripts/common/schema/idl/: amm_v3.json  clmm_mock.json  dex_adapter.json  registry.json
capstone-project/scripts/common/schema/types/: amm_v3.ts  clmm_mock.ts  dex_adapter.ts  registry.ts
capstone-project/scripts/common/utils/: index.ts
capstone-project/tests/: registry.test.ts
capstone-project/tests-rs/: Cargo.toml
capstone-project/tests-rs/src/: clmm.rs  clmm_mock.rs  dex_adapter.rs  lib.rs  registry.rs  wsol.rs
capstone-project/tests-rs/src/helpers/: dex_adapter.rs  registry.rs  wsol.rs
capstone-project/tests-rs/src/helpers/extensions/: clmm.rs  clmm_mock.rs  dex_adapter.rs  registry.rs  wsol.rs
capstone-project/tests-rs/src/helpers/suite/: core.rs  decimal.rs  types.rs
week-0/rs-prereq/: Cargo.toml
week-0/rs-prereq/src/: lib.rs
week-0/ts-prereq/: .gitignore  airdrop.ts  enroll.ts  keygen.ts  package.json  transfer.ts  tsconfig.json
week-0/ts-prereq/programs/: Turbin3_prereq.ts
week-1/solana-starter/ts/: .gitignore  package.json
week-1/solana-starter/ts/cluster1/: nft_image.ts  nft_metadata.ts  nft_mint.ts  rug.ts  spl_init.ts  spl_metadata.ts  spl_mint.ts  spl_transfer.ts
week-1/solana-starter/ts/cluster1/wallet/: index.ts
week-2/: Anchor.toml  Cargo.toml  README.md  package.json
week-2/programs/amm/: Cargo.toml
week-2/programs/amm/src/: error.rs  helpers.rs  lib.rs  math.rs  state.rs
week-2/programs/amm/src/instructions/: create_pool.rs  liquidity.rs  mod.rs  provide_liquidity.rs  swap.rs
week-2/programs/escrow/: Cargo.toml
week-2/programs/escrow/src/: lib.rs  state.rs
week-2/programs/escrow/src/instructions/: make.rs  refund.rs  take.rs
week-2/programs/vault/: Cargo.toml
week-2/programs/vault/src/: lib.rs
week-2/scripts/backend/: utils.ts
week-2/scripts/common/account/: index.ts
week-2/scripts/common/config/: index.ts
week-2/scripts/common/interfaces/: index.ts
week-2/scripts/common/schema/idl/: amm.json  escrow.json  vault.json
week-2/scripts/common/schema/types/: amm.ts  escrow.ts  vault.ts
week-2/scripts/common/utils/: index.ts
week-2/tests/: amm.test.ts  escrow.test.ts  vault.test.ts
week-2/tests-rs/: Cargo.toml
week-2/tests-rs/src/: amm.rs  chat.rs  escrow.rs  lib.rs
week-2/tests-rs/src/helpers/: amm.rs  chat.rs  escrow.rs  escrow_reduced.rs
week-2/tests-rs/src/helpers/suite/: codes.rs  core.rs  decimal.rs  types.rs
week-3/: Anchor.toml  Cargo.toml  README.md  package.json
week-3/programs/marketplace/: Cargo.toml
week-3/programs/marketplace/src/: error.rs  helpers.rs  lib.rs  state.rs
week-3/programs/marketplace/src/instructions/: accept_buy_trade.rs  accept_sell_trade.rs  create_buy_trade.rs  create_sell_trade.rs  create_trade.rs  delist.rs  init.rs  list.rs  mod.rs  purchase.rs  remove_buy_trade.rs  remove_sell_trade.rs  withdraw_fee.rs
week-3/programs/nft/: Cargo.toml
week-3/programs/nft/src/: lib.rs  state.rs
week-3/programs/nft/src/instructions/: create_collection.rs  mint_token.rs  mod.rs
week-3/programs/staking/: Cargo.toml
week-3/programs/staking/src/: error.rs  helpers.rs  lib.rs  math.rs  state.rs
week-3/programs/staking/src/instructions/: claim.rs  init.rs  mod.rs  stake.rs  unstake.rs
week-3/scripts/common/account/: index.ts
week-3/scripts/common/config/: index.ts
week-3/scripts/common/schema/idl/: amm.json  marketplace.json  nft.json  staking.json
week-3/scripts/common/schema/types/: amm.ts  marketplace.ts  nft.ts  staking.ts
week-3/scripts/common/utils/: index.ts
week-3/tests/: amm.test.ts  marketplace.test.ts  staking.test.ts
week-4/: .gitignore  Anchor.toml  Cargo.toml  README.md  tsconfig.json
week-4/programs/dice/: Cargo.toml
week-4/programs/dice/src/: error.rs  lib.rs  state.rs
week-4/programs/nft/src/: lib.rs
week-4/scripts/common/account/: index.ts
week-4/tests/: dice.test.ts  nft.test.ts
(+8 files in other folders)
