[workspace.package]
edition = "2021"
repository = "https://github.com/M-Daeva/solana-boilerplate"
authors = ["M. Daeva <embedmad@gmail.com>"]
license = "Apache-2.0"

[workspace]
members = ["programs/*", "packages/*", "tests-rs"]
exclude = []
resolver = "2"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[workspace.dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token"] }

# testing
strum = "0.24.1"
strum_macros = "0.24.3"
pretty_assertions = "1.4.1"
litesvm = "0.6.1"
solana-account = "2.2.1"
solana-instruction = "2.2.1"
solana-keypair = "2.2.1"
solana-message = "2.2.1"
solana-pubkey = "2.2.1"
solana-signer = "2.2.1"
solana-transaction = "2.2.1"
solana-system-program = "2.2.1"
solana-program = "2.2.1"
spl-associated-token-account = "7.0.0"
spl-token = "8.0.0"
solana-kite = "0.1.4"

base = { path = "./packages/base" }
registry = { path = "./programs/registry" }
dex-adapter = { path = "./programs/dex-adapter" }
