[package]
name = "tests"
version = "1.0.0"
description = "litesvm tests"
repository = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }

strum = { workspace = true }
strum_macros = { workspace = true }
pretty_assertions = { workspace = true }
litesvm = { workspace = true }
solana-account = { workspace = true }
solana-instruction = { workspace = true }
solana-keypair = { workspace = true }
solana-message = { workspace = true }
solana-pubkey = { workspace = true }
solana-signer = { workspace = true }
solana-transaction = { workspace = true }
solana-system-program = { workspace = true }
solana-program = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-token = { workspace = true }
solana-kite = { workspace = true }

# contracts
amm = { workspace = true, features = ["cpi"] }
