[package]
name = "amm"
version = "1.0.0"
description = "Created with Anchor"
repository = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
solana-program = { workspace = true }
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
